--- a/packages/serverpod_client/pubspec.yaml
+++ b/packages/serverpod_client/pubspec.yaml
@@ -14,7 +14,9 @@ environment:
 
 dependencies:
   serverpod_serialization: #^1.1.1
-    path: ../serverpod_serialization
+    git:
+      url: git@github.com:shvilesh/serverpod.git
+      path: packages/serverpod_serialization
   http: ^1.0.0
   meta: ^1.8.0
   web_socket_channel: ^2.4.0
