--- a/packages/serverpod_flutter/pubspec.yaml
+++ b/packages/serverpod_flutter/pubspec.yaml
@@ -16,7 +16,9 @@ environment:
 dependencies:
   connectivity_plus: ^3.0.4
   serverpod_client: #^1.1.1
-    path: ../serverpod_client
+    git:
+      url: git@github.com:shvilesh/serverpod.git
+      path: packages/serverpod_client
   flutter:
     sdk: flutter
 
