--- a/packages/serverpod_shared/pubspec.yaml
+++ b/packages/serverpod_shared/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   yaml: ^3.1.1
   super_string: ^1.0.3
   serverpod_client: #^1.1.1
-    path: ../serverpod_client
+    git:
+      url: git@github.com:shvilesh/serverpod.git
+      path: packages/serverpod_client
 
 dev_dependencies:
   lints: ^2.0.1
