--- a/packages/serverpod_client/pubspec.yaml
+++ b/packages/serverpod_client/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   serverpod_serialization: #^1.1.1
     git:
       url: git@github.com:shvilesh/serverpod.git
+      branch: shvilesh
       path: packages/serverpod_serialization
   http: ^1.0.0
   meta: ^1.8.0
