--- a/packages/serverpod_flutter/pubspec.yaml
+++ b/packages/serverpod_flutter/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   serverpod_client: #^1.1.1
     git:
       url: git@github.com:shvilesh/serverpod.git
+      branch: shvilesh
       path: packages/serverpod_client
   flutter:
     sdk: flutter
