--- a/packages/serverpod_service_client/pubspec.yaml
+++ b/packages/serverpod_service_client/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   serverpod_client: #^1.1.1
     git:
       url: git@github.com:shvilesh/serverpod.git
+      branch: shvilesh
       path: packages/serverpod_client
   meta: ^1.8.0
 
