--- a/tools/serverpod_cli/pubspec.yaml
+++ b/tools/serverpod_cli/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   serverpod_shared: #^1.1.1
     git:
       url: git@github.com:shvilesh/serverpod.git
+      branch: shvilesh
       path: packages/serverpod_shared
   serverpod_service_client: #^1.1.1
     git:
       url: git@github.com:shvilesh/serverpod.git
+      branch: shvilesh
       path: packages/serverpod_service_client
   async: ^2.11.0
   meta: ^1.8.0
